--- a/dev/scss/_herogrid.scss
+++ b/dev/scss/_herogrid.scss
@@ -6,6 +6,7 @@
         padding: 0;
         margin: 0;
         width: 100%;
+        position: relative;
         img{
            width: 100%;
            height: 14rem;
@@ -17,8 +18,12 @@
         color: white;
         background-color: rgba(0, 0, 0, 0.637);
         padding: 1rem;
-        position: relative;
-        top: -3.3rem;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        box-sizing: border-box;
+        
+        
         
 
     }
